--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
-@import "./variables";
+@import "./themes/sketchy/variables";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
-@import "./bootswatch";
+@import "./themes/sketchy/bootswatch";
 
 @import "~animate.css/animate.min";
 
